# toucans-hub

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
backend/: Dockerfile  build_image.sh  run_container.sh
backend/app/: main.py
backend/db/prompts/juunge/assumption-checker/default/: model_args.json  system_message.txt  template.txt
backend/db/prompts/juunge/compare/default/: function_args.json  system_message.txt  template.txt
backend/db/prompts/juunge/evaluator/default/: function_args.json  system_message.txt  template.txt
backend/db/prompts/juunge/intent_expander/default/: function_args.json  system_message.txt  template.txt
backend/db/prompts/juunge/intent_expander/old-default/: function_args.json  system_message.txt  template.txt
backend/db/prompts/juunge/keypoints/default/: model_args.json  system_message.txt  template.txt
backend/db/prompts/juunge/keypoints/exp/: function_args.json  system_message.txt
backend/db/prompts/juunge/quizz-creator/default/: function_args.json  template.txt
backend/db/prompts/juunge/search_intent/default/: function_args.json  model_args.json  system_message.txt  template.txt
backend/db/prompts/juunge/search_intent/exp/: model_args.json  (+1 more)
migrations/: env.py
migrations/versions/: 3e27955dec0a_added_username_to_promptfunction.py  6664bf4fc765_added_username_to_promptfunction.py  791a3d90ee28_changed_chat_api_config_to_completion_.py  e30d824cff17_removed_username.py  eea492e9ad8b_init_commit.py
toucans_hub/db/: crud.py  models.py  utils.py
(+13 files in other folders)
